[metadata]
name = ILHEB
author = Arturo Rodriguez
author_email = da.rodriguezh@rice.edu
version = attr: ILHEB.__version__
description = A Finite Element Python implementation
long_description_content_type = text/markdown
long_description =  file: README.md
url = https://github.com/ZibraMax/a_direct_stiffness_implementation
package_dir =
    = .\src
[options]
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    scipy
[options.extras_require]
docs = 
    sphinx
    m2r2
    docutils==0.18.1
    furo
test =
    pytest
    pytest-emoji